# Voyager-4

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py
cognee_framework/: __init__.py
cognee_framework/core/: __init__.py
cognee_framework/evaluation/: __init__.py  base_evaluator.py  comparative_evaluator.py  enhanced_evaluator.py
cognee_framework/mcp_integration/: __init__.py  utils.py
cognee_framework/templates/: __init__.py  engine.py  renderer.py
cognee_framework/utils/: __init__.py  config.py
docs/: README.md
docs/api_reference/: evaluation-framework-reference.md  evaluation_api.md
docs/best-practices/: evaluation-guide.md
docs/best_practices/: evaluation-guide.md  prompt-engineering-guide.md
docs/developer_guide/: architecture.md  contributing.md  intelligent-prompt-generation.md
docs/examples/: evaluation_examples.md
docs/tutorials/: basic_evaluation.md
docs/user_guide/: cognee_enhanced_templates.md  cognee_insights.md  cognee_integration.md  configuration.md  evaluation_system.md  installation.md  quick_start.md  template_system.md
evaluations/: README.md  README_COGNEE_ENHANCED.md
evaluations/config/: cognee_config.yaml  default_config.yaml
evaluations/scripts/: compare_prompts.py  evaluate_prompt.py
examples/: __init__.py
examples/evaluation_demos/: __init__.py  cognee_intelligent_prompts_demo.py  demo_cognee_enhanced_evaluation.py  demo_cognee_mcp_integration.py  live_cognee_demonstration.py  real_mcp_integration_demo.py
prompts/: README.md
scripts/: codebase_intelligent_prompts.py  cognee_mcp_usage_example.py  compare  evaluate  run_enhanced_evaluation.py
templates/: README.md
templates/basic/: codebase-overview-template.md
templates/cognee_powered/: README.md
templates/cognee_powered/architecture_aware/: README.md  metadata.yaml  template.md
templates/cognee_powered/cognee_enhanced/: bug_fixing_python_cognee_enhanced.md  (+6 more)
test_cases/examples/: codebase_understanding_examples.json
tests/: __init__.py
tests/integration_tests/: __init__.py  test_cognee_integration.py  test_cognee_mcp_integration.py  test_cognee_mcp_live.py  validate_cognee_integration.py
tests/unit_tests/: __init__.py  test_cognee_templates.py
(+27 files in other folders)
